--- a/s2k_config_fcltu.json
+++ b/s2k_config_fcltu.json
@@ -12,7 +12,8 @@
         "cfgNDIU": [],
         "cfgCnC": [
             {
-                "cfgCncHasCRC": true,
+                "cfgCncCucTime": "Cuc43",
+                "cfgCncHasCRC": "HasCRC",
                 "cfgCncPortTM": 10000,
                 "cfgCncHost": "localhost",
                 "cfgCncPortTC": 11000,
