--- a/s2k_config_profile.json
+++ b/s2k_config_profile.json
@@ -9,7 +9,8 @@
         "cfgNDIU": [],
         "cfgCnC": [
             {
-                "cfgCncHasCRC": true,
+                "cfgCncCucTime": "Cuc43",
+                "cfgCncHasCRC": "HasCRC",
                 "cfgCncPortTM": 33333,
                 "cfgCncHost": "localhost",
                 "cfgCncPortTC": 22222,
