Some small updates for C&C acks

--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -163,6 +163,7 @@ library
         , timer-wheel
         , word24
         , time
+        , pretty-show
 
     if flag(sle)
         cpp-options: -DHAS_SLE
