--- a/esa-base/stack.yaml
+++ b/esa-base/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-19.16
+resolver: nightly-2022-09-11
 # User packages to be built.
 # Various formats can be used as shown in the example below.
 #
