--- a/esa-space-protocols/stack.yaml
+++ b/esa-space-protocols/stack.yaml
@@ -16,7 +16,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-19.16
+resolver: nightly-2022-09-11
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
