Fixed CPC handling for TSC MIBs, added formatting corrections for model output

--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -79,6 +79,7 @@ library
     General.GetBitField
     General.TriState
     General.SizeOf
+    General.TextTools
     Data.DataModel
     Data.TM.Value
     Data.TM.Parameter
