Updates for Acknowledges

--- a/EdenRouterEden1Config.json
+++ b/EdenRouterEden1Config.json
@@ -6,6 +6,7 @@
     "aurisTheme": "ThemeLight",
     "aurisPusConfig": {
         "cfgNDIU": [],
+        "cfgMission": "MissionPUSC",
         "cfgCnC": [
         ],
         "cfgUnknownSPID": 5071,
