--- a/EdenRouterCnc1Config.json
+++ b/EdenRouterCnc1Config.json
@@ -1,7 +1,7 @@
 {
     "aurisMIB": null,
     "aurisInstance": 0,
-    "aurisMission": "DEFAULT",
+    "aurisMission": "PUS-C",
     "aurisDbConfig": null,
     "aurisTheme": "ThemeLight",
     "aurisPusConfig": {
