Added CO2M secondary Headers

--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -69,6 +69,7 @@ library
         Data.PUS.MissionSpecific.Default
         Data.PUS.MissionSpecific.MissionSpecific
         Data.PUS.MissionSpecific.PUSC
+        Data.PUS.MissionSpecific.CO2M
         Data.PUS.EventHandler
         Data.PUS.TCGeneration
         Protocol.NCTRS
