--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -182,7 +182,7 @@ library
     ghc-options: 
         -O0 -g2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
-                -funbox-strict-fields
+                -funbox-strict-fields -fno-full-laziness
 
     if flag(optimize)
         ghc-options: -O2 
