--- a/EdenRouterEden1Config.json
+++ b/EdenRouterEden1Config.json
@@ -38,6 +38,7 @@
         },
         "cfgMaxTMFrameLen": 1115,
         "cfgCltuBlockSize": "CltuBS_8",
+        "cfgCLTUTrailer": "Trailer0xC5",
         "cfgEDEN": [
             {
                 "cfgEdenID": 1,
