--- a/s2k_config_fcltu.json
+++ b/s2k_config_fcltu.json
@@ -53,6 +53,7 @@
             }
         ],
         "cfgCltuBlockSize": "CltuBS_8",
+        "cfgCLTUTrailer": "Trailer0xC5",
         "cfgStorePUSPackets": true,
         "cfgEDEN": [
             {
