--- a/s2k_config_opt.json
+++ b/s2k_config_opt.json
@@ -67,6 +67,7 @@
             }
         ],
         "cfgCltuBlockSize": "CltuBS_8",
+        "cfgCLTUTrailer": "Trailer0xC5",
         "cfgEDEN": [
             {
                 "cfgEdenID": 1,
