--- a/pusc_config_ccs_only_2.json
+++ b/pusc_config_ccs_only_2.json
@@ -59,6 +59,7 @@
         },
         "cfgNCTRS": [],
         "cfgCltuBlockSize": "CltuBS_8",
+        "cfgCLTUTrailer": "Trailer0xC5",
         "cfgEDEN": [],
         "cfgStoreTMFrames": true,
         "cfgStorePUSPackets": true,
