--- a/pusc_config_g2g.json
+++ b/pusc_config_g2g.json
@@ -126,6 +126,7 @@
         },
         "cfgNCTRS": [],
         "cfgCltuBlockSize": "CltuBS_8",
+        "cfgCLTUTrailer": "Trailer0xC5",
         "cfgEDEN": [],
         "cfgStoreTMFrames": true,
         "cfgStorePUSPackets": true,
