--- a/s2k_gaia_config.json
+++ b/s2k_gaia_config.json
@@ -68,6 +68,7 @@
             }
         ],
         "cfgCltuBlockSize": "CltuBS_8",
+        "cfgCLTUTrailer": "Trailer0xC5",
         "cfgEDEN": [
             {
                 "cfgEdenID": 1,
