--- a/s2k_config_opt.json
+++ b/s2k_config_opt.json
@@ -3,10 +3,7 @@
     "aurisInstance": 0,
     "aurisMission": "S2K_TEST",
     "aurisTheme": "ThemeLight",
-    "aurisDbConfig": {
-        "cfgMongoHost": "localhost",
-        "cfgMongoPort": null
-    },
+    "aurisDbConfig": null,
     "aurisPusConfig": {
         "cfgMission": "MissionDefault",
         "cfgNDIU": [],
