Switched to cabal for building

--- a/auris-tm-displays/auris-tm-displays.cabal
+++ b/auris-tm-displays/auris-tm-displays.cabal
@@ -68,7 +68,7 @@ library
     colour,
     multiset,
     time,
-    gi-gtk,
+    gi-gtk < 4.0,
     gi-gtk-hs,
     gi-cairo,
     gi-cairo-connector,
