--- a/auris-control-displays/auris-control-displays.cabal
+++ b/auris-control-displays/auris-control-displays.cabal
@@ -82,13 +82,13 @@ library
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:       base ^>=4.14.0.0
+  build-depends:       base < 5
     , rio
     , containers
     , lens
     , text
     , vector
-    , gi-gtk
+    , gi-gtk < 4.0
     , gi-gtk-hs
     , gi-gobject
     , gi-gdk
