--- a/auris-tc-displays/auris-tc-displays.cabal
+++ b/auris-tc-displays/auris-tc-displays.cabal
@@ -74,14 +74,14 @@ library
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:       base ^>=4.14.0.0
+  build-depends:       base < 5
     , rio
     , containers
     , lens
     , text
     , text-short
     , vector
-    , gi-gtk
+    , gi-gtk < 4.0
     , gi-gtk-hs
     , gi-gobject
     , gi-gdk
