--- a/timer-wheel/timer-wheel.cabal
+++ b/timer-wheel/timer-wheel.cabal
@@ -33,10 +33,10 @@ source-repository head
 
 library
   build-depends:
-    atomic-primops ^>= 0.8,
-    base ^>= 4.9 || ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14,
-    psqueues ^>= 0.2.7,
-    vector ^>= 0.10 || ^>= 0.11 || ^>= 0.12
+    atomic-primops,
+    base < 5,
+    psqueues,
+    vector 
 
   default-extensions:
     BlockArguments
