STarted adding TM Packet loading from DB

--- a/auris-tm-displays/auris-tm-displays.cabal
+++ b/auris-tm-displays/auris-tm-displays.cabal
@@ -49,7 +49,7 @@ library
     GUI.GraphWidget
     GUI.ANDWidget
     GUI.ParamDisplay
-    GUI.FrameRetrieveDialog
+    GUI.RetrieveDialog
     GUI.NameStore
 
 
